--- a/app/src/main/res/layout/activity_spalsh_screen.xml
+++ b/app/src/main/res/layout/activity_spalsh_screen.xml
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:fontFamily="@font/ubuntu_bold"
-        android:text="Kishan Morichauhan"
-        android:textColor="#7C45F8"
+        android:text="Ankit Chauhan"
+        android:textColor="#E91E63"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
