--- a/app/src/main/res/drawable-v24/receive_drawable.xml
+++ b/app/src/main/res/drawable-v24/receive_drawable.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#737373"/>
+        android:color="#FFFFFF"/>
     <corners
-        android:bottomRightRadius="5dp"
-        android:topRightRadius="5dp"
-        android:bottomLeftRadius="5dp"/>
+        android:bottomRightRadius="10dp"
+        android:topRightRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
 </shape>
