--- a/app/src/main/res/drawable/cricle.xml
+++ b/app/src/main/res/drawable/cricle.xml
@@ -2,5 +2,5 @@
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/purple_500"/>
+        android:color="@color/pink"/>
 </shape>
