--- a/app/src/main/res/drawable/send_drawable.xml
+++ b/app/src/main/res/drawable/send_drawable.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/purple_500"/>
+        android:color="#FF5E95"/>
     <corners
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:bottomLeftRadius="5dp"/>
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
 </shape>
