--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -13,4 +13,9 @@
         android:id="@+id/calls"
         android:icon="@drawable/telephone"
         android:title="Calls" />
+
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_baseline_login_24"
+        android:title="LogOut"/>
 </menu>
