--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pinkLite">#B0FFC0D6</color>
 
     <color name="gray">#E3E3E3</color>
+    <color name="pink">#E91E63</color>
 </resources>
